Fix loading background Tab after cold start

If a place holder is scheduled to be displayed, do not allow
capturing a snapshot. This prevents calling WebState::GetView
before WebState::NavigationManager::LoadIfNecessary and thus
prevents bumping into issue crbug.com/820484.

Bug: 820111
Change-Id: I9d326a0fdccd7b6ea22b1b5477e79b7b7b82a586
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Reviewed-on: https://chromium-review.googlesource.com/956188
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542473}
Former-commit-id: eebda1ae9ca8ab4d2d85a5141060a1bb4db70dd1